# TPI-LAB4-2025

./: .gitignore  README.md  main.py  pyproject.toml
config/: database.py
frontend/: blank.html  index.html  index_completo.html
frontend/App/: App.js
frontend/assets/modulos/: footer.html  home.html  login.html  menu.html  navbar.html
frontend/controladores/: login-controler.js  router.js
frontend/controladores/categorias/: categorias.js
frontend/controladores/destinos/: destinos.js  new.js
frontend/controladores/home/: home.js
frontend/controladores/paquetes/: formulario.html  new.js  paquetes.js  tabla.html
frontend/controladores/productos/: new.js  productos.js
frontend/controladores/publico/: registro.js
frontend/controladores/reservas/: new.js  reservas.js
frontend/controladores/usuarios/: new.js  usuarios.js
frontend/controladores/ventas/: ventas.js
frontend/servicios/: categorias-servicios.js  destinos-servicios.js  paquetes-servicios.js  productos-servicios.js  reservas-servicios.js  usuarios-servicios.js  ventas-servicios.js
frontend/tienda/: tienda.html  vuelo.html
frontend/tienda/App/: App.js
frontend/tienda/assets/css/: destinos.css  historial.css  inicio.css  (+4 more)
frontend/tienda/controladores/: routerVuelo.js
frontend/tienda/utils/: utils.js
middlewares/: jwt_bearer.py
models/: destinos.py  paquetes.py  reservas.py  usuarios.py
routers/: destinos.py  paquetes.py  reservas.py  usuarios.py
schemas/: destinos.py  paquetes.py  reservas.py  usuarios.py
services/: destinos.py  paquetes.py  reservas.py  usuarios.py
(+10 files in other folders)
